added delete transaction functionality

--- a/templates/app/_base.html
+++ b/templates/app/_base.html
@@ -38,12 +38,12 @@
                 <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                     <div class="sb-sidenav-menu">
                         <div class="nav">
-                            <div class="sb-sidenav-menu-heading">Core</div>
+                            <div class="sb-sidenav-menu-heading">Analyze</div>
                             <a class="nav-link" href="{% url 'dashboard' %}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                 Dashboard
                             </a>
-                            <div class="sb-sidenav-menu-heading">Transactions</div>
+                            <div class="sb-sidenav-menu-heading">Records</div>
                             <a class="nav-link" href="{% url 'transactions' %}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 Transactions
