--- a/templates/app/transactions.html
+++ b/templates/app/transactions.html
@@ -52,7 +52,7 @@
                                 <td>{{ transaction.category }}</td>
                                 <td>
                                     <a class="btn btn-sm btn-outline-info" href="#">Edit</a>
-                                    <a class="btn btn-sm btn-outline-danger" href="#">Delete</a>
+                                    <a class="btn btn-sm btn-outline-danger" href="{% url 'transaction-delete' transaction.id %}">Delete</a>
                                 </td>
                             </tr>
                             {% endfor %}
