--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -20,7 +20,7 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <i class="fas fa-chart-bar me-1"></i>
-                            Category Breakdown
+                            {{ current_month|date:"F" }} Category Breakdown
                         </div>
                         <div class="card-body"><canvas id="myPieChart" width="100%" height="40"></canvas></div>
                     </div>
@@ -75,5 +75,6 @@
             </div>
         </div>
     </main>
+    {{ categories_data|json_script:"categories-data" }}
 {% endblock content %}
                 
