can now update transactions

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -7,16 +7,16 @@
                 <li class="breadcrumb-item active">Dashboard</li>
             </ol>
             <div class="row">
-                <div class="col-xl-6">
+                <div class="col-lg-6">
                     <div class="card mb-4">
                         <div class="card-header">
                             <i class="fas fa-chart-area me-1"></i>
-                            Monthly Expenses
+                            {{ current_month|date:"F" }} Cashflow Breakdown
                         </div>
                         <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-lg-6">
                     <div class="card mb-4">
                         <div class="card-header">
                             <i class="fas fa-chart-bar me-1"></i>
@@ -76,5 +76,6 @@
         </div>
     </main>
     {{ categories_data|json_script:"categories-data" }}
+    {{ monthly_data|json_script:"monthly-data" }}
 {% endblock content %}
                 
